# FEM

./: 1D.py  README.md  oneD.py  pyproject.toml  test.py  twoD.py
HeatFEM.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/: 2d_cooling_fin.py  anotherTest.py  boundaryTest.py  comp.py  run_1d.py  run_2d.py  run_3d.py  unifiedTest.py
examples/cooling_fin/: cooling_fin2D.py
fem/: assemble.py  solver.py
fem/archive/: twoD.py
fem/common/: boundary.py  solver_base.py  utils.py
fem/d1/: __init__.py  assembly.py  boundary.py  element.py  elements.py  mesh.py  postprocess.py  solver.py
fem/d2/: assembly.py  boundary.py  element.py  mesh.py  solver.py
fem/d3/: element.py  mesh.py  solver.py
postprocess/: plot_temp2D.py
